Cambios hasta ahora del main
